background position on mobile error fixed

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     justify-content: center;
     background: #26283D;
     background-size: cover;
+    background-position: center;
+    background-image: fixed;
 }
 
 .app-container {
